--- a/python/notebooks/istio_agent.ipynb
+++ b/python/notebooks/istio_agent.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: OPENAI_API_KEY=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\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%env OPENAI_API_KEY=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\n"
+    "%env OPENAI_API_KEY=keyhere"
    ]
   },
   {
@@ -43,19 +35,22 @@
     "    You are a planning agent.\n",
     "    Your job is to break down complex tasks into smaller, manageable subtasks that can be executed by the team members. DO NOT MAKE UP ADDITIONAL AND UNNECESSARY SUBTASKS.\n",
     "    Your team members are:\n",
-    "        prometheus_agent: Knows how to query Prometheus for metrics.\n",
-    "        istio_agent: Knows how to generate YAML for Istio resources and work with Istio CLI.\n",
-    "        k8s_agent: Knows how to interact with a Kubernetes cluster, retrieve resources, apply manifests, etc.\n",
+    "        prometheus_agent: Knows how to query and retrieve metrics for services in the cluster.\n",
+    "        istio_agent: Knows how to work with Istio CLI and manage Istio installations.\n",
+    "        k8s_agent: KNows how to interact with a Kubernetes cluster using the kubectl CLI. It can only run kubectl commands.\n",
     "\n",
-    "    You only plan and delegate tasks - you do not execute them yourself.\n",
+    "    You only plan and delegate tasks - you do not execute them yourself. Always assign the task to the most appropriate team member.\n",
+    "    Each team member has a specific set of skills and tools they can use to complete the task and provide the necessary information to you.\n",
+    "    Tasks that explicitly require a specific tool or agent should be assigned to the agent with that tool. For example:\n",
+    "    - if the task requires querying for metrics, it should be assigned to the Prometheus agent.\n",
+    "    - if the task requires to install Istio, it should be assigned to the Istio agent.\n",
     "\n",
     "    When assigning tasks, use this format:\n",
-    "    1. <agent> : <task>\n",
+    "    1. <agent>: <task>\n",
     "\n",
     "    After all tasks are complete, summarize the findings and end with \"TERMINATE\".\n",
     "    \"\"\",\n",
     ")\n",
-    "\n",
     "\n",
     "istioctl_agent = AssistantAgent(\n",
     "    \"istioctl_agent\",\n",
@@ -63,18 +58,25 @@
     "    tools=[BuiltInTool(\"istio.install\"), BuiltInTool(\"istio.verify_install\")],\n",
     "    model_client=model_client,\n",
     "    system_message=\"\"\"\n",
-    "    You are an Istio agent that knows how to install and verify Istio.\n",
+    "    You are an Istio agent that knows how to install and verify Istio installation.\n",
     "    \"\"\",\n",
     ")\n",
     "\n",
     "prom_agent = AssistantAgent(\n",
     "    \"prometheus_agent\",\n",
     "    description=\"An agent for Prometheus operations\",\n",
-    "    tools=[BuiltInTool(\"prometheus.is_prometheus_installed\")],\n",
+    "    tools=[\n",
+    "        BuiltInTool(\"prometheus.query\"),\n",
+    "        BuiltInTool(\"prometheus.query_range\"),\n",
+    "        BuiltInTool(\"prometheus.get_series\"),\n",
+    "        BuiltInTool(\"prometheus.get_label_names\"),\n",
+    "        BuiltInTool(\"prometheus.get_label_values\"),\n",
+    "    ],\n",
     "    model_client=model_client,\n",
     "    system_message=\"\"\"\n",
-    "    You are a Prometheus agent. You know how to query Prometheus for metrics.\n",
-    "    Before running processing any Prometheus queries, make sure to check if Prometheus is installed on the cluster.\n",
+    "    You are a Prometheus agent. You know how to query metrics from Prometheus.\n",
+    "\n",
+    "    Before executing any tools, check whether Istio is installed and based on that use the appropriate metric name (e.g. `istio_requests_total{destination_service=\"servicename\"}`).\n",
     "    \"\"\",\n",
     ")\n",
     "\n",
@@ -82,13 +84,12 @@
     "k8s_agent = AssistantAgent(\n",
     "    \"k8s_agent\",\n",
     "    description=\"An agent for k8s operations\",\n",
-    "    tools=[BuiltInTool(\"k8s.apply_manifest\"), BuiltInTool(\"k8s.get_resources\")],\n",
+    "    tools=[BuiltInTool(\"k8s.get_resources\")],\n",
     "    model_client=model_client,\n",
     "    system_message=\"\"\"\n",
     "    You are a k8s agent. You know how to interact with a Kubernetes cluster.\n",
     "    \"\"\",\n",
     ")\n",
-    "\n",
     "\n",
     "\n",
     "# istio_agent = AssistantAgent(\n",
@@ -114,13 +115,13 @@
     "\n",
     "\n",
     "team = SelectorGroupChat(\n",
-    "    [planning_agent, prom_agent, k8s_agent, istioctl_agent],\n",
+    "    [planning_agent, k8s_agent, prom_agent],\n",
     "    model_client=model_client,\n",
     "    termination_condition=termination,\n",
     "    allow_repeated_speaker=True,\n",
     ")\n",
     "\n",
-    "task = \"Check if Istio is installed on the cluster. If it's not installed, install it in ambient mode, then install Bookinfo (https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/bookinfo/platform/kube/bookinfo.yaml)\"\n",
+    "task = \"I have a bunch of pods running in default namespace. Can you extract interesting metrics from them?\"  # , then install Bookinfo (https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/bookinfo/platform/kube/bookinfo.yaml)\"\n",
     "\n",
     "# Use asyncio.run(...) if you are running this in a script.\n",
     "# await Console(team.run_stream(task=task))\n"
