--- a/python/notebooks/istio_agent.ipynb
+++ b/python/notebooks/istio_agent.ipynb
@@ -11,10 +11,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- user ----------\n",
+      "I have a bunch of pods running in default namespace. Can you show me the metrics and create a dashboard?\n",
+      "---------- PlanningAgent ----------\n",
+      "To fulfill your request, we need to complete the following subtasks:\n",
+      "\n",
+      "1. Retrieve the list of pods running in the default namespace.\n",
+      "2. Query metrics for those pods.\n",
+      "3. Create a dashboard to display the metrics.\n",
+      "\n",
+      "Here is how we will divide the tasks:\n",
+      "\n",
+      "1. k8s_agent: Retrieve the list of pods currently running in the default namespace.\n",
+      "2. prometheus_agent: Query and retrieve metrics for the pods running in the default namespace.\n",
+      "3. prometheus_agent: Create a dashboard using the retrieved metrics.\n",
+      "\n",
+      "Let's proceed with these tasks.\n",
+      "---------- k8s_agent ----------\n",
+      "[FunctionCall(id='call_VSg1zsHoWN9yLluB2QhHRqCQ', arguments='{\"name\":\"pods\",\"resource_type\":\"pods\",\"ns\":\"default\",\"output\":\"wide\"}', name='get_resources')]\n",
+      "---------- k8s_agent ----------\n",
+      "[FunctionExecutionResult(content='Error running kubectl command: Error from server (NotFound): pods \"pods\" not found\\n', call_id='call_VSg1zsHoWN9yLluB2QhHRqCQ')]\n",
+      "---------- k8s_agent ----------\n",
+      "Error running kubectl command: Error from server (NotFound): pods \"pods\" not found\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/peterj/projects/kagent/python/.venv/lib/python3.12/site-packages/autogen_agentchat/agents/_assistant_agent.py:416: UserWarning: Both tool_calls and content are present in the message. This is unexpected. content will be ignored, tool_calls will be used.\n",
+      "  model_result = await self._model_client.create(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- k8s_agent ----------\n",
+      "[FunctionCall(id='call_Ox4XuPwH2eFCKSi8iyzjja4e', arguments='{\"name\":\"\",\"resource_type\":\"pods\",\"ns\":\"default\",\"output\":\"wide\"}', name='get_resources')]\n",
+      "---------- k8s_agent ----------\n",
+      "[FunctionExecutionResult(content='NAME                                     READY   STATUS    RESTARTS        AGE     IP            NODE                 NOMINATED NODE   READINESS GATES\\ncurl                                     1/1     Running   1 (2d14h ago)   2d15h   10.244.0.37   kind-control-plane   <none>           <none>\\ndetails-v1-65cfcf56f9-x9vlv              1/1     Running   0               2d15h   10.244.0.32   kind-control-plane   <none>           <none>\\nhttpbin-gateway-istio-5bfbd7f47f-lqbrh   1/1     Running   0               2d14h   10.244.0.40   kind-control-plane   <none>           <none>\\nproductpage-v1-d5789fdfb-bw9dh           1/1     Running   0               2d15h   10.244.0.36   kind-control-plane   <none>           <none>\\nratings-v1-7c9bd4b87f-v9mxn              1/1     Running   0               2d15h   10.244.0.31   kind-control-plane   <none>           <none>\\nreviews-v1-6584ddcf65-tfnqr              1/1     Running   0               2d15h   10.244.0.33   kind-control-plane   <none>           <none>\\nreviews-v2-6f85cb9b7c-9sjqc              1/1     Running   0               2d15h   10.244.0.34   kind-control-plane   <none>           <none>\\nreviews-v3-6f5b775685-mgv4d              1/1     Running   0               2d15h   10.244.0.35   kind-control-plane   <none>           <none>\\n', call_id='call_Ox4XuPwH2eFCKSi8iyzjja4e')]\n",
+      "---------- k8s_agent ----------\n",
+      "NAME                                     READY   STATUS    RESTARTS        AGE     IP            NODE                 NOMINATED NODE   READINESS GATES\n",
+      "curl                                     1/1     Running   1 (2d14h ago)   2d15h   10.244.0.37   kind-control-plane   <none>           <none>\n",
+      "details-v1-65cfcf56f9-x9vlv              1/1     Running   0               2d15h   10.244.0.32   kind-control-plane   <none>           <none>\n",
+      "httpbin-gateway-istio-5bfbd7f47f-lqbrh   1/1     Running   0               2d14h   10.244.0.40   kind-control-plane   <none>           <none>\n",
+      "productpage-v1-d5789fdfb-bw9dh           1/1     Running   0               2d15h   10.244.0.36   kind-control-plane   <none>           <none>\n",
+      "ratings-v1-7c9bd4b87f-v9mxn              1/1     Running   0               2d15h   10.244.0.31   kind-control-plane   <none>           <none>\n",
+      "reviews-v1-6584ddcf65-tfnqr              1/1     Running   0               2d15h   10.244.0.33   kind-control-plane   <none>           <none>\n",
+      "reviews-v2-6f85cb9b7c-9sjqc              1/1     Running   0               2d15h   10.244.0.34   kind-control-plane   <none>           <none>\n",
+      "reviews-v3-6f5b775685-mgv4d              1/1     Running   0               2d15h   10.244.0.35   kind-control-plane   <none>           <none>\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unclosed client session\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x111939340>\n",
+      "Unclosed connector\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x1120af2f0>, 3191299.096856833)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x1119392b0>\n",
+      "/Users/peterj/projects/kagent/python/.venv/lib/python3.12/site-packages/autogen_agentchat/agents/_assistant_agent.py:416: UserWarning: Both tool_calls and content are present in the message. This is unexpected. content will be ignored, tool_calls will be used.\n",
+      "  model_result = await self._model_client.create(\n",
+      "Unclosed client session\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x1119cd670>\n",
+      "Unclosed connector\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x1120af0b0>, 3191308.153203541)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x1119cc7d0>\n",
+      "Unclosed client session\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x1119ce600>\n",
+      "Unclosed connector\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x1120ac110>, 3191308.15527125)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x1119cd790>\n",
+      "Unclosed client session\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x1119cfa10>\n",
+      "Unclosed connector\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x1120af530>, 3191308.156558666)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x1119cd7c0>\n",
+      "Unclosed client session\n",
+      "client_session: <aiohttp.client.ClientSession object at 0x1119cc560>\n",
+      "Unclosed connector\n",
+      "connections: ['deque([(<aiohttp.client_proto.ResponseHandler object at 0x1120af650>, 3191308.1572875)])']\n",
+      "connector: <aiohttp.connector.TCPConnector object at 0x1119cc050>\n"
+     ]
+    },
+    {
+     "ename": "CancelledError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCancelledError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 112\u001b[0m\n\u001b[1;32m    109\u001b[0m task \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mI have a bunch of pods running in default namespace. Can you show me the metrics and create a dashboard?\u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# , then install Bookinfo (https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/bookinfo/platform/kube/bookinfo.yaml)\"\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;66;03m# Use asyncio.run(...) if you are running this in a script.\u001b[39;00m\n\u001b[0;32m--> 112\u001b[0m \u001b[38;5;28;01mawait\u001b[39;00m Console(team\u001b[38;5;241m.\u001b[39mrun_stream(task\u001b[38;5;241m=\u001b[39mtask))\n",
+      "File \u001b[0;32m~/projects/kagent/python/.venv/lib/python3.12/site-packages/autogen_agentchat/ui/_console.py:117\u001b[0m, in \u001b[0;36mConsole\u001b[0;34m(stream, no_inline_images, output_stats, user_input_manager)\u001b[0m\n\u001b[1;32m    113\u001b[0m last_processed: Optional[T] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    115\u001b[0m streaming_chunks: List[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m--> 117\u001b[0m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m message \u001b[38;5;129;01min\u001b[39;00m stream:\n\u001b[1;32m    118\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(message, TaskResult):\n\u001b[1;32m    119\u001b[0m         duration \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time\n",
+      "File \u001b[0;32m~/projects/kagent/python/.venv/lib/python3.12/site-packages/autogen_agentchat/teams/_group_chat/_base_group_chat.py:433\u001b[0m, in \u001b[0;36mBaseGroupChat.run_stream\u001b[0;34m(self, task, cancellation_token)\u001b[0m\n\u001b[1;32m    431\u001b[0m     cancellation_token\u001b[38;5;241m.\u001b[39mlink_future(message_future)\n\u001b[1;32m    432\u001b[0m \u001b[38;5;66;03m# Wait for the next message, this will raise an exception if the task is cancelled.\u001b[39;00m\n\u001b[0;32m--> 433\u001b[0m message \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m message_future\n\u001b[1;32m    434\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m message \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    435\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/Cellar/python@3.12/3.12.8/Frameworks/Python.framework/Versions/3.12/lib/python3.12/asyncio/queues.py:158\u001b[0m, in \u001b[0;36mQueue.get\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getters\u001b[38;5;241m.\u001b[39mappend(getter)\n\u001b[1;32m    157\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 158\u001b[0m     \u001b[38;5;28;01mawait\u001b[39;00m getter\n\u001b[1;32m    159\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m    160\u001b[0m     getter\u001b[38;5;241m.\u001b[39mcancel()  \u001b[38;5;66;03m# Just in case getter is not done yet.\u001b[39;00m\n",
+      "\u001b[0;31mCancelledError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
+    "from datetime import datetime\n",
     "from autogen_agentchat.agents import AssistantAgent\n",
     "from autogen_agentchat.conditions import MaxMessageTermination, TextMentionTermination\n",
     "from autogen_agentchat.teams import SelectorGroupChat\n",
@@ -31,8 +138,8 @@
     "    \"PlanningAgent\",\n",
     "    description=\"An agent for planning tasks, this agent should be the first to engage when given a new task.\",\n",
     "    model_client=model_client,\n",
-    "    system_message=\"\"\"\n",
-    "    You are a planning agent.\n",
+    "    system_message=f\"\"\"\n",
+    "    You are a planning agent. Current date and time is: {datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")}\n",
     "    Your job is to break down complex tasks into smaller, manageable subtasks that can be executed by the team members. DO NOT MAKE UP ADDITIONAL AND UNNECESSARY SUBTASKS.\n",
     "    Your team members are:\n",
     "        prometheus_agent: Knows how to query and retrieve metrics for services in the cluster.\n",
@@ -57,8 +164,9 @@
     "    description=\"An agent for Istio operations\",\n",
     "    tools=[BuiltInTool(\"istio.install\"), BuiltInTool(\"istio.verify_install\")],\n",
     "    model_client=model_client,\n",
-    "    system_message=\"\"\"\n",
+    "    system_message=f\"\"\"\n",
     "    You are an Istio agent that knows how to install and verify Istio installation.\n",
+    "    Current date and time is: {datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")}\n",
     "    \"\"\",\n",
     ")\n",
     "\n",
@@ -73,10 +181,10 @@
     "        BuiltInTool(\"prometheus.get_label_values\"),\n",
     "    ],\n",
     "    model_client=model_client,\n",
-    "    system_message=\"\"\"\n",
-    "    You are a Prometheus agent. You know how to query metrics from Prometheus.\n",
+    "    system_message=f\"\"\"\n",
+    "    You are a Prometheus agent. You know how to query metrics from Prometheus. Current date and time is: {datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")}\n",
     "\n",
-    "    Before executing any tools, check whether Istio is installed and based on that use the appropriate metric name (e.g. `istio_requests_total{destination_service=\"servicename\"}`).\n",
+    "    Before executing any tools, check whether Istio is installed and based on that use the appropriate metric name (e.g. `istio_requests_total`).\n",
     "    \"\"\",\n",
     ")\n",
     "\n",
@@ -121,19 +229,10 @@
     "    allow_repeated_speaker=True,\n",
     ")\n",
     "\n",
-    "task = \"I have a bunch of pods running in default namespace. Can you extract interesting metrics from them?\"  # , then install Bookinfo (https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/bookinfo/platform/kube/bookinfo.yaml)\"\n",
+    "task = \"I have a bunch of pods running in default namespace. Can you show me the metrics and create a dashboard?\"  # , then install Bookinfo (https://raw.githubusercontent.com/istio/istio/refs/heads/master/samples/bookinfo/platform/kube/bookinfo.yaml)\"\n",
     "\n",
     "# Use asyncio.run(...) if you are running this in a script.\n",
     "# await Console(team.run_stream(task=task))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(team.dump_component().model_dump_json(indent=2))"
    ]
   }
  ],
