change over to named tools

--- a/python/notebooks/print_tool.ipynb
+++ b/python/notebooks/print_tool.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,8 @@
       "  \"component_type\": \"team\",\n",
       "  \"version\": 1,\n",
       "  \"component_version\": 1,\n",
-      "  \"description\": null,\n",
+      "  \"description\": \"A team that runs a group chat with participants taking turns in a round-robin fashion\\n    to publish a message to all.\",\n",
+      "  \"label\": \"RoundRobinGroupChat\",\n",
       "  \"config\": {\n",
       "    \"participants\": [\n",
       "      {\n",
@@ -27,6 +28,8 @@
       "        \"component_type\": \"agent\",\n",
       "        \"version\": 1,\n",
       "        \"component_version\": 1,\n",
+      "        \"description\": \"An agent that provides assistance with tool use.\",\n",
+      "        \"label\": \"AssistantAgent\",\n",
       "        \"config\": {\n",
       "          \"name\": \"assistant\",\n",
       "          \"model_client\": {\n",
@@ -34,6 +37,8 @@
       "            \"component_type\": \"model\",\n",
       "            \"version\": 1,\n",
       "            \"component_version\": 1,\n",
+      "            \"description\": \"Chat completion client for OpenAI hosted models.\",\n",
+      "            \"label\": \"OpenAIChatCompletionClient\",\n",
       "            \"config\": {\n",
       "              \"model\": \"gpt-4o\",\n",
       "              \"api_key\": \"fake\"\n",
@@ -45,9 +50,18 @@
       "              \"component_type\": \"tool\",\n",
       "              \"version\": 1,\n",
       "              \"component_version\": 1,\n",
+      "              \"label\": \"BuiltInTool\",\n",
       "              \"config\": {\n",
       "                \"fn_name\": \"k8s.get_pod\"\n",
       "              }\n",
+      "            },\n",
+      "            {\n",
+      "              \"provider\": \"kagent.tools.k8s.GetPodsTool\",\n",
+      "              \"component_type\": \"tool\",\n",
+      "              \"version\": 1,\n",
+      "              \"component_version\": 1,\n",
+      "              \"label\": \"GetPodsTool\",\n",
+      "              \"config\": {}\n",
       "            }\n",
       "          ],\n",
       "          \"handoffs\": [],\n",
@@ -56,10 +70,13 @@
       "            \"component_type\": \"chat_completion_context\",\n",
       "            \"version\": 1,\n",
       "            \"component_version\": 1,\n",
+      "            \"description\": \"An unbounded chat completion context that keeps a view of the all the messages.\",\n",
+      "            \"label\": \"UnboundedChatCompletionContext\",\n",
       "            \"config\": {}\n",
       "          },\n",
       "          \"description\": \"An agent that provides assistance with ability to use tools.\",\n",
       "          \"system_message\": \"Use tools to solve tasks.\",\n",
+      "          \"model_client_stream\": false,\n",
       "          \"reflect_on_tool_use\": false,\n",
       "          \"tool_call_summary_format\": \"{result}\"\n",
       "        }\n",
@@ -70,6 +87,8 @@
       "      \"component_type\": \"termination\",\n",
       "      \"version\": 1,\n",
       "      \"component_version\": 1,\n",
+      "      \"description\": \"Terminate the conversation after a maximum number of messages have been exchanged.\",\n",
+      "      \"label\": \"MaxMessageTermination\",\n",
       "      \"config\": {\n",
       "        \"max_messages\": 2\n",
       "      }\n",
@@ -86,7 +105,7 @@
     "from autogen_core import ComponentModel\n",
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
     "\n",
-    "from kagent.tools import BuiltInTool\n",
+    "from kagent.tools.k8s import GetPods\n",
     "\n",
     "# Create an agent that uses the OpenAI GPT-4o model.\n",
     "model_client = OpenAIChatCompletionClient(\n",
@@ -96,7 +115,7 @@
     "agent = AssistantAgent(\n",
     "    name=\"assistant\",\n",
     "    model_client=model_client,\n",
-    "    tools=[BuiltInTool(\"k8s.get_pod\")],\n",
+    "    tools=[GetPods()],\n",
     "    system_message=\"Use tools to solve tasks.\",\n",
     ")\n",
     "\n",
