--- a/python/notebooks/print_tool.ipynb
+++ b/python/notebooks/print_tool.ipynb
@@ -7,94 +7,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"provider\": \"autogen_agentchat.teams.RoundRobinGroupChat\",\n",
-      "  \"component_type\": \"team\",\n",
-      "  \"version\": 1,\n",
-      "  \"component_version\": 1,\n",
-      "  \"description\": \"A team that runs a group chat with participants taking turns in a round-robin fashion\\n    to publish a message to all.\",\n",
-      "  \"label\": \"RoundRobinGroupChat\",\n",
-      "  \"config\": {\n",
-      "    \"participants\": [\n",
-      "      {\n",
-      "        \"provider\": \"autogen_agentchat.agents.AssistantAgent\",\n",
-      "        \"component_type\": \"agent\",\n",
-      "        \"version\": 1,\n",
-      "        \"component_version\": 1,\n",
-      "        \"description\": \"An agent that provides assistance with tool use.\",\n",
-      "        \"label\": \"AssistantAgent\",\n",
-      "        \"config\": {\n",
-      "          \"name\": \"assistant\",\n",
-      "          \"model_client\": {\n",
-      "            \"provider\": \"autogen_ext.models.openai.OpenAIChatCompletionClient\",\n",
-      "            \"component_type\": \"model\",\n",
-      "            \"version\": 1,\n",
-      "            \"component_version\": 1,\n",
-      "            \"description\": \"Chat completion client for OpenAI hosted models.\",\n",
-      "            \"label\": \"OpenAIChatCompletionClient\",\n",
-      "            \"config\": {\n",
-      "              \"model\": \"gpt-4o\",\n",
-      "              \"api_key\": \"fake\"\n",
-      "            }\n",
-      "          },\n",
-      "          \"tools\": [\n",
-      "            {\n",
-      "              \"provider\": \"kagent.tools.BuiltInTool\",\n",
-      "              \"component_type\": \"tool\",\n",
-      "              \"version\": 1,\n",
-      "              \"component_version\": 1,\n",
-      "              \"label\": \"BuiltInTool\",\n",
-      "              \"config\": {\n",
-      "                \"fn_name\": \"k8s.get_pod\"\n",
-      "              }\n",
-      "            },\n",
-      "            {\n",
-      "              \"provider\": \"kagent.tools.k8s.GetPodsTool\",\n",
-      "              \"component_type\": \"tool\",\n",
-      "              \"version\": 1,\n",
-      "              \"component_version\": 1,\n",
-      "              \"label\": \"GetPodsTool\",\n",
-      "              \"config\": {}\n",
-      "            }\n",
-      "          ],\n",
-      "          \"handoffs\": [],\n",
-      "          \"model_context\": {\n",
-      "            \"provider\": \"autogen_core.model_context.UnboundedChatCompletionContext\",\n",
-      "            \"component_type\": \"chat_completion_context\",\n",
-      "            \"version\": 1,\n",
-      "            \"component_version\": 1,\n",
-      "            \"description\": \"An unbounded chat completion context that keeps a view of the all the messages.\",\n",
-      "            \"label\": \"UnboundedChatCompletionContext\",\n",
-      "            \"config\": {}\n",
-      "          },\n",
-      "          \"description\": \"An agent that provides assistance with ability to use tools.\",\n",
-      "          \"system_message\": \"Use tools to solve tasks.\",\n",
-      "          \"model_client_stream\": false,\n",
-      "          \"reflect_on_tool_use\": false,\n",
-      "          \"tool_call_summary_format\": \"{result}\"\n",
-      "        }\n",
-      "      }\n",
-      "    ],\n",
-      "    \"termination_condition\": {\n",
-      "      \"provider\": \"autogen_agentchat.conditions.MaxMessageTermination\",\n",
-      "      \"component_type\": \"termination\",\n",
-      "      \"version\": 1,\n",
-      "      \"component_version\": 1,\n",
-      "      \"description\": \"Terminate the conversation after a maximum number of messages have been exchanged.\",\n",
-      "      \"label\": \"MaxMessageTermination\",\n",
-      "      \"config\": {\n",
-      "        \"max_messages\": 2\n",
-      "      }\n",
-      "    }\n",
-      "  }\n",
-      "}\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GetPods' from 'kagent.tools.k8s' (/home/eitanyarmush/src/kagent-dev/kagent/python/src/kagent/tools/k8s/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mautogen_ext\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mopenai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAIChatCompletionClient\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagent\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mistio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ProxyConfig\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mkagent\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtools\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mk8s\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m GetPods\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Create an agent that uses the OpenAI GPT-4o model.\u001b[39;00m\n\u001b[1;32m     11\u001b[0m model_client \u001b[38;5;241m=\u001b[39m OpenAIChatCompletionClient(\n\u001b[1;32m     12\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     13\u001b[0m     api_key\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfake\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     14\u001b[0m )\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'GetPods' from 'kagent.tools.k8s' (/home/eitanyarmush/src/kagent-dev/kagent/python/src/kagent/tools/k8s/__init__.py)"
      ]
     }
    ],
@@ -105,6 +29,7 @@
     "from autogen_core import ComponentModel\n",
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
     "\n",
+    "from kagent.tools.istio import ProxyConfig\n",
     "from kagent.tools.k8s import GetPods\n",
     "\n",
     "# Create an agent that uses the OpenAI GPT-4o model.\n",
@@ -115,7 +40,7 @@
     "agent = AssistantAgent(\n",
     "    name=\"assistant\",\n",
     "    model_client=model_client,\n",
-    "    tools=[GetPods()],\n",
+    "    tools=[GetPods(), ProxyConfig()],\n",
     "    system_message=\"Use tools to solve tasks.\",\n",
     ")\n",
     "\n",
